# django-ai-boost

./: .gitignore  AGENTS.md  README.md  conftest.py  example_settings.py  opencode.json  pyproject.toml  server.json  test_auth_logic.py  test_prompt.py  test_query_model.py  test_read_recent_logs.py  test_run_check.py  test_server.py
.github/workflows/: publish.yml
fixtures/: README.md
fixtures/testproject/: populate_db.py
fixtures/testproject/blog/: models.py
fixtures/testproject/testproject/: urls.py
src/django_ai_boost/: __init__.py  server_fastmcp.py
src/django_mcp/: server_fastmcp.py
src/django_telescope/: __init__.py  server_fastmcp.py
