[project]
name = "django-telescope"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server for Django applications, inspired by Laravel Boost"
readme = "README.md"
authors = [
    { name = "Rai Siqueira", email = "rai93siqueira@gmail.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "fastmcp>=2.12.4",
]

[tool.mcp]
name = "io.github.raisiqueira/django-telescope"

[project.scripts]
django-telescope = "django_telescope:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/raisiqueira/django-telescope"
Issues = "https://github.com/raisiqueira/django-telescope/issues"
