[project]
name = "django-ai-boost"
version = "0.6.0"
description = "A Model Context Protocol (MCP) server for Django applications, inspired by Laravel Boost"
readme = "README.md"
authors = [
    { name = "Rai Siqueira", email = "rai93siqueira@gmail.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "fastmcp>=2.13.3",
]

[tool.mcp]
name = "io.github.vintasoftware/django-ai-boost"

[project.scripts]
django-ai-boost = "django_ai_boost:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/vintasoftware/django-ai-boost"
Issues = "https://github.com/vintasoftware/django-ai-boost/issues"
