[project]
name = "django-ai-boost"
version = "0.8.0"
description = "A Model Context Protocol (MCP) server for Django applications, inspired by Laravel Boost"
readme = "README.md"
authors = [
    { name = "Rai Siqueira", email = "rai93siqueira@gmail.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "fastmcp>=2.14.5",
]

[tool.mcp]
name = "io.github.vintasoftware/django-ai-boost"

[project.scripts]
django-ai-boost = "django_ai_boost:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/vintasoftware/django-ai-boost"
Issues = "https://github.com/vintasoftware/django-ai-boost/issues"
